@@ -1,5 +1,7 @@
 2.0.11 not released
 
+	* torrent_status::num_pieces counts pieces passed hash check, as documented
+
 2.0.10 released
 
 	* allow on_unknown_torrent method in the absence of active torrents (new plugin feature added)
